pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-client-body-buffer-size.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-client-body-buffer-size
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-request-buffering: "on"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "10M"

spec:
  ingressClassName: nginx
  rules:
    - host: hostname.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
